fix: close streams after files are retrieved by clients using StreamingOutput (#72)
* chore: align with main branch
* chore: save metadata of files in the FileMetadata table only after storages service operations succeeded
* chore: make dependency check optional in Jenkinsfile
* chore: bump package version to 0.7.1-2

ref: WSC-1707

---------

Co-authored-by: Federico Rispo <federico.rispo@zextras.com>
Co-authored-by: Matteo Baglini <matteo.baglini@gmail.com>